--- a/config/training_config.json
+++ b/config/training_config.json
@@ -1,6 +1,6 @@
 {
     "dataConfig": {
-        "data-root": "data",
+        "data-root": "/media/patelm/ssd/iPlanner_TrainingData/data",
         "env-id": "training_list.txt",
         "env_type": "TrainingData",
         "crop-size": [192, 320],
@@ -12,7 +12,11 @@
         "in-channel": 16,
         "knodes": 5,
         "goal-step": 5,
-        "max-episode-length": 25
+        "max-episode-length": 25,
+        "encoder": "resnet18",
+        "pretrained": false,
+        "pretrained_weights": "models/teacher_checkpoint.pth",
+        "freeze-backbone": false
     },
     "trainingConfig": {
         "training": true,
@@ -21,7 +25,7 @@
         "min-lr": 0.000001,
         "patience": 4,
         "epochs": 50,
-        "batch-size": 128,
+        "batch-size": 64,
         "w-decay": 0.001,
         "num-workers": 2,
         "gpu-id": 0
