--- a/config/training_config.json
+++ b/config/training_config.json
@@ -15,7 +15,7 @@
         "max-episode-length": 25,
         "encoder": "resnet18",
         "pretrained": false,
-        "pretrained_weights": "models/teacher_checkpoint.pth",
+        "pretrained-weights": "models/teacher_checkpoint.pth",
         "freeze-backbone": false
     },
     "trainingConfig": {
@@ -24,11 +24,12 @@
         "factor": 0.1,
         "min-lr": 0.000001,
         "patience": 4,
-        "epochs": 50,
+        "epochs": 100,
         "batch-size": 64,
         "w-decay": 0.001,
         "num-workers": 2,
-        "gpu-id": 0
+        "gpu-id": 0,
+        "seed": 42
     },
     "logConfig": {
         "log-save": "models/log-",
